[Hotfix] Fix grafici